Added New Buttons

--- a/src/root.css
+++ b/src/root.css
@@ -26,21 +26,24 @@
     background-color: var(--primary-hover);
 }
 
-.primary-border{
+.primary-border {
     border-color: var(--primary-color);
 }
 
 /* Secondary */
-.secondary-bg{
+.secondary-bg {
     background-color: var(--secondary-color);
 }
-.secondary{
+
+.secondary {
     color: var(--secondary-text);
 }
-.secondary-border{
+
+.secondary-border {
     border-color: var(--secondary-color);
 }
-.animation-blink{
+
+.animation-blink {
     animation: blink 1.5s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
 
@@ -56,3 +59,8 @@
         opacity: 0;
     }
 }
+
+
+/* Tooltip */
+
+/* Tooltip animation */
