--- a/src/output.css
+++ b/src/output.css
@@ -671,6 +671,18 @@ video {
   height: 100vh;
 }
 
+.h-\[2rem\] {
+  height: 2rem;
+}
+
+.h-20 {
+  height: 5rem;
+}
+
+.h-14 {
+  height: 3.5rem;
+}
+
 .w-10 {
   width: 2.5rem;
 }
@@ -705,6 +717,14 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-20 {
+  width: 5rem;
+}
+
+.w-14 {
+  width: 3.5rem;
 }
 
 .-translate-x-1\/2 {
